Added New Files

--- a/googlecontactintegration/googlecontactintegration/pom.xml
+++ b/googlecontactintegration/googlecontactintegration/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.4.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dotarot</groupId>
-	<artifactId>googlecontacts</artifactId>
+	<groupId>com.paras</groupId>
+	<artifactId>googlecontactintegration</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>googlecontacts</name>
-	<description>Spring Boot Integration for Google Contacts</description>
+	<name>googlecontactintegration</name>
+	<description>Google Contact Integration Activity</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -30,6 +30,12 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
@@ -49,6 +55,19 @@
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
+
+		<!-- Google API Client -->
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.31.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-people</artifactId>
+			<version>v1-rev20220420-1.32.1</version>
 		</dependency>
 
 		<dependency>
